@@ -4475,6 +4475,7 @@ command to generate the output files.
     <glob pattern="Makefile"/>
     <glob pattern="makefile"/>
     <glob pattern="GNUmakefile"/>
+    <glob weight="10" pattern="Makefile.*"/>
     <magic priority="50">
       <match type="string" value="#!/usr/bin/make" offset="0"/>
       <match type="string" value="#! /usr/bin/make" offset="0"/>
