@@ -1,0 +1,4 @@
+all: myprog
+
+myprog:
+	$(MAKE) -$(MAKEFLAGS) $(MAKE_FLAGS) -f Makefile.real all
