@@ -186,6 +186,8 @@ small_wav.mxf application/mxf
 # other
 text.pdf application/pdf
 README.pdf application/pdf
+Makefile text/x-makefile ox
+Makefile.gnu text/x-makefile ox
 # Copied from http://bugs.freedesktop.org/show_bug.cgi?id=15260
 test.gnd application/gnunet-directory
 text.ps application/postscript
