@@ -1,3 +1,12 @@
+2009-04-10  David Faure  <faure@kde.org>
+
+	* freedesktop.org.xml.in: Add Makefile.* pattern for text/x-makefile,
+	to catch Makefile.gnu and other similar names, with low weight to let
+	Makefile.html files be text/html.
+	* tests/list:
+	* tests/Makefile:
+	* tests/Makefile.gnu: Test data
+
 2009-04-09  Alexander Larsson  <alexl@redhat.com>
 
 	* update-mime-database.c: (process_freedesktop_node),
